Update project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gpt-ai-flow-web-docusaurus",
+  "name": "gpt-ai-flow-doc-web",
   "version": "0.0.0",
   "private": true,
   "scripts": {
