--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.0",
     "@tsconfig/docusaurus": "^1.0.5",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
     "prettier": "^2.8.7",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.7.4"
   },
   "browserslist": {
