--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -3,3 +3,21 @@ xiaoka:
   title: 大家好，这里是好学爱摸鱼的小卡！
   url: https://space.bilibili.com/137975681
   image_url: /img/blog/author/2023-08-17-xiaoka.jpg
+
+endi:
+  name: Endilie Yacop Sucipto
+  title: Maintainer of Docusaurus
+  url: https://github.com/endiliey
+  image_url: https://github.com/endiliey.png
+
+yangshun:
+  name: Yangshun Tay
+  title: Front End Engineer @ Facebook
+  url: https://github.com/yangshun
+  image_url: https://github.com/yangshun.png
+
+slorber:
+  name: Sébastien Lorber
+  title: Docusaurus maintainer
+  url: https://sebastienlorber.com
+  image_url: https://github.com/slorber.png
