--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -2,7 +2,7 @@ xiaoka:
   name: 小卡
   title: 大家好，这里是好学爱摸鱼的小卡！
   url: https://space.bilibili.com/137975681
-  image_url: https://www.gptaiflow.com/img/blog/author/2023-08-17-xiaoka.jpg
+  image_url: https://www.xiaokaup.com/img/profile/author/2023-08-17-xiaoka.jpg
 
 endi:
   name: Endilie Yacop Sucipto
