--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 xiaoka:
   name: 小卡
-  title: 大家好，这里是好学爱摸鱼的小卡！
+  title: Hi 这里是喜欢研究效率工具和思维方式的小卡～
   url: https://space.bilibili.com/137975681
   image_url: https://www.xiaokaup.com/img/profile/2023-08-17-xiaoka.jpg
