--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.0",
     "@tsconfig/docusaurus": "^1.0.5",
+    "@types/lodash": "^4.14.200",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.27",
     "prettier": "^2.8.7",
