Fix url of profile for xiaoka

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -2,4 +2,4 @@ xiaoka:
   name: 小卡
   title: Hi 这里是喜欢研究效率工具和思维方式的小卡～
   url: https://space.bilibili.com/137975681
-  image_url: https://www.xiaokaup.com/img/profile/2023-08-17-xiaoka.jpg
+  image_url: https://www.xiaokaup.com/profile-xiaoka.png
