--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start --port 3002",
+    "start:en": "docusaurus start --port 3002 --locale en",
+    "start:zh": "docusaurus start --port 3002 --locale zh",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
+    "write-translations:en": "docusaurus write-translations --locale en",
+    "write-translations:zh": "docusaurus write-translations --locale zh",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@docusaurus/core": "2.4.0",
@@ -36,7 +41,7 @@
     "@types/lodash": "^4.14.200",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.27",
-    "prettier": "^2.8.7",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.7.4"
   },
